shim/third-party/rust/vendor/ghost-0.1.6/tests/ui/covariant.stderr
error: lifetime may not live long enough
  --> tests/ui/covariant.rs:11:5
   |
10 | fn require_contravariant<'a>(phantom: CovariantPhantom<&'a str>) -> CovariantPhantom<&'static str> {
   |                          -- lifetime `'a` defined here
11 |     phantom
   |     ^^^^^^^ returning this value requires that `'a` must outlive `'static`
